# ipytestsuite

./: .gitignore  README.md  justfile  pyproject.toml
src/ipytestsuite/: __init__.py  ai_helpers.py  exceptions.py  helpers.py  magic.py  models.py  output_formatting.py  pytest_integration.py  test_results.py  utils.py
tests/: conftest.py
tests/unit/: test_models.py
