[project]
name = "ipytestsuite"
version = "0.1.0"
description = "A Python package for running `pytest` Jupyter notebooks, geared towards Python tutorials"
readme = "README.md"
authors = [
    { name = "Edoardo Baldi", email = "edoardob90@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipynbname>=2024.1.0.0",
    "ipywidgets>=8.1.7",
    "markdown2>=2.5.3",
    "openai>=1.84.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
]

[project.scripts]
ipytestsuite = "ipytestsuite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
