[project]
name = "ipytestsuite"
version = "0.1.0"
description = "A Python package for running `pytest` Jupyter notebooks, geared towards Python tutorials"
readme = "README.md"
authors = [
    { name = "Edoardo Baldi", email = "edoardo.baldi@empa.ch" },
    { name = "Aliaksandr Yakutovich", email = "aliaksandr.yakutovich@empa.ch" },
    { name = "Simone Baffelli", email = "simone.baffelli@empa.ch" },
    { name = "Despina Adamopoulou", email = "despina.adamopoulou@empa.ch" },
    { name = "Pascal Su", email = "pascal.su@empa.ch" },
]
requires-python = ">=3.13"
dependencies = [
    "ipynbname>=2024.1.0.0",
    "ipywidgets>=8.1.7",
    "markdown2>=2.5.3",
    "openai>=1.84.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
]
keywords = ["jupyter", "pytest", "testing", "education", "tutorial"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: Jupyter",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/empa-scientific-it/ipytestsuite"
Repository = "https://github.com/empa-scientific-it/ipytestsuite"
Issues = "https://github.com/empa-scientific-it/ipytestsuite/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
