[project]
name = "ipytestsuite"
version = "0.1.0"
description = "Interactive testing suite for Jupyter notebooks with AI-powered explanations"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Edoardo Baldi", email = "edoardo.baldi@empa.ch" },
  { name = "Simone Baffelli", email = "simone.baffelli@empa.ch" },
]
dependencies = [
  "ipython>=9.5.0",
  "ipywidgets>=8.1.7",
  "markdown2>=2.5.4",
  "pytest>=8.4.2",
]

[project.optional-dependencies]
ai = [
  "openai>=1.106.1",
  "pydantic>=2.11.7",
  "python-dotenv>=1.1.1",
  "tenacity>=9.1.2",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
